# etl-processor

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci_cd.yml
etl_processor/: __init__.py  exceptions.py  extract.py  load.py  logger.py  models.py  tool.py  transform.py
examples/: firds_etl.ipynb
tests/: conftest.py  test_e2e.py  test_extract.py  test_load.py  test_models.py  test_transform.py  test_version.py
